fixing mobile overflow Y issue

--- a/css/chat.css
+++ b/css/chat.css
@@ -133,7 +133,8 @@
 
 #list_body {
   height:480px;
-  overflow-y:hidden;
+  overflow-y: scroll;
+   -webkit-overflow-scrolling: touch;
   padding: 0;
   border-right: 1px solid #C0C0C0; 
 }
